[project]
name = "leetcode"
version = "0.1.0"
description = "Solving some leetcode to get the hang of programming after a while."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
strict_optional = true
ignore_missing_imports = true
disallow_any_unimported = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_unused_ignores = true

[tool.uv.workspace]
members = [
    "website",
]
